# FantasyEngineDX11

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Notes.txt  README.md
Scripts/: FetchLibraries.cmake
Source/: CMakeLists.txt  Foo.h  main.cpp
Source/Object/: Camera.cpp  Camera.h  DataStructures.h  Object.cpp  Object.h
Source/Renderer/: RenderManager.h  Renderer.cpp  Renderer.h
Source/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/Window/: Window.cpp  Window.h
